--- a/app/views/school_classes/edit.html.erb
+++ b/app/views/school_classes/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>SchoolClasses#edit</h1>
-<p>Find me in app/views/school_classes/edit.html.erb</p>
+<h1>School Classes#edit</h1>
+
+<h3>Edit School Classes Form</h3>
+ 
+<%= form_for(@school_class) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <%= f.label :room_number %>
+  <%= f.text_field :room_number %>
+  <%= f.submit %>
+<% end %>
