--- a/app/views/school_classes/show.html.erb
+++ b/app/views/school_classes/show.html.erb
@@ -1,2 +1,4 @@
 <h1>SchoolClasses#show</h1>
-<p>Find me in app/views/school_classes/show.html.erb</p>
+
+<h2>Title: <%= @school_class.title %></h2>
+<h2>Room No.: <%= @school_class.room_number %></h2>
