--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,2 +1,11 @@
 <h1>Students#edit</h1>
-<p>Find me in app/views/students/edit.html.erb</p>
+
+<h3>Edit Student Form</h3>
+ 
+<%= form_for(@student) do |f| %>
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name %>
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name %>
+  <%= f.submit %>
+<% end %>
