--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Students#show</h1>
-<p>Find me in app/views/students/show.html.erb</p>
+
+<h2>First Name: <%= @student.first_name %></h2>
+<h2>Last Name: <%= @student.last_name %></h2>
